--- a/web-view/view.html
+++ b/web-view/view.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fresh Girl - Image Gallery</title>
+    <title>Gái xinh Việt Nam - Album</title>
     <link rel="stylesheet" href="view-styles.css">
     <!-- Firebase SDK v8 (for compatibility with static HTML) -->
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
