--- a/web-view/index.html
+++ b/web-view/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fresh Girl - Title Gallery</title>
+    <title>Gái xinh Việt Nam</title>
     <link rel="stylesheet" href="gallery-styles.css">
     <!-- Firebase SDK v8 (for compatibility with static HTML) -->
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
@@ -54,12 +54,26 @@
             padding: 40px;
             color: #ffffff;
         }
+
+        @keyframes gradientShift {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
+        }
+
+        @keyframes glow {
+            from { text-shadow: 2px 2px 4px rgba(0,0,0,0.3), 0 0 10px rgba(255,105,180,0.5); }
+            to { text-shadow: 2px 2px 4px rgba(0,0,0,0.3), 0 0 20px rgba(255,20,147,0.8), 0 0 30px rgba(255,20,147,0.6); }
+        }
     </style>
 </head>
 <body>
     <div style="width: 100%; min-height: 100vh; background-color: #121212; padding: 20px 0;">
-        <h1 style="text-align: center; color: #ffffff; margin: 20px 0;">Fresh Girl - Title Gallery</h1>
-        <p style="text-align: center; color: #cccccc; margin-bottom: 30px;">Click on any title to view all images in full size</p>
+        <div style="text-align: center; margin: 20px 0;">
+            <img src="logo.jpg" alt="Gái xinh Việt Nam Logo" style="max-width: 200px; height: auto; margin-bottom: 10px; border-radius: 10px; box-shadow: 0 4px 8px rgba(0,0,0,0.3);">
+            <h1 style="color: #ffffff; margin: 10px 0; background: linear-gradient(45deg, #ff69b4, #ff1493, #dc143c, #ff69b4); background-size: 400% 400%; -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-clip: text; font-size: 2.5em; font-weight: bold; text-shadow: 2px 2px 4px rgba(0,0,0,0.3); animation: gradientShift 3s ease-in-out infinite, glow 2s ease-in-out infinite alternate;">Gái xinh Việt Nam</h1>
+        </div>
+        <p style="text-align: center; color: #cccccc; margin-bottom: 30px;">Click vào bất kỳ album nào để xem tất cả hình ảnh</p>
 
         <!-- Notification system -->
         <div id="notification" class="notification" style="display: none;">
