--- a/web-view/index.html
+++ b/web-view/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gái xinh Việt Nam</title>
+    <link rel="icon" type="image/x-icon" href="logo.ico">
     <link rel="stylesheet" href="gallery-styles.css">
     <!-- Firebase SDK v8 (for compatibility with static HTML) -->
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
@@ -70,8 +71,8 @@
 <body>
     <div style="width: 100%; min-height: 100vh; background-color: #121212; padding: 20px 0;">
         <div style="text-align: center; margin: 20px 0;">
-            <img src="logo.jpg" alt="Gái xinh Việt Nam Logo" style="max-width: 200px; height: auto; margin-bottom: 10px; border-radius: 10px; box-shadow: 0 4px 8px rgba(0,0,0,0.3);">
             <h1 style="color: #ffffff; margin: 10px 0; background: linear-gradient(45deg, #ff69b4, #ff1493, #dc143c, #ff69b4); background-size: 400% 400%; -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-clip: text; font-size: 2.5em; font-weight: bold; text-shadow: 2px 2px 4px rgba(0,0,0,0.3); animation: gradientShift 3s ease-in-out infinite, glow 2s ease-in-out infinite alternate;">Gái xinh Việt Nam</h1>
+            <img src="logo.jpg" alt="Gái xinh Việt Nam Logo" style="max-width: 200px; height: auto; margin-top: 10px; border-radius: 10px; box-shadow: 0 4px 8px rgba(0,0,0,0.3);">
         </div>
         <p style="text-align: center; color: #cccccc; margin-bottom: 30px;">Click vào bất kỳ album nào để xem tất cả hình ảnh</p>
 
