--- a/web-view/view.html
+++ b/web-view/view.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gái xinh Việt Nam - Album</title>
+    <link rel="icon" type="image/x-icon" href="logo.ico">
     <link rel="stylesheet" href="view-styles.css">
     <!-- Firebase SDK v8 (for compatibility with static HTML) -->
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
