--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             </select>
             <button id="createTitleBtn" style="margin: 10px 0;">Create New Title</button>
             <button id="uploadBtn" style="display: none;">Upload Images</button>
+            <button id="clearAllBtn" style="display: none; margin-left: 10px; background-color: #dc3545;">Clear All</button>
             <div id="uploadSpinner" class="spinner" style="display: none;"></div>
         </div>
         <div class="images-section">
