--- a/web-view/view.html
+++ b/web-view/view.html
@@ -27,6 +27,11 @@
             0%, 100% { opacity: 0; transform: scale(0.5); }
             50% { opacity: 1; transform: scale(1); }
         }
+
+        @keyframes borderGlow {
+            0%, 100% { box-shadow: 0 0 20px rgba(255, 105, 180, 0.3), 0 0 40px rgba(255, 20, 147, 0.2), inset 0 1px 0 rgba(255, 255, 255, 0.1); }
+            50% { box-shadow: 0 0 30px rgba(255, 105, 180, 0.5), 0 0 60px rgba(255, 20, 147, 0.4), inset 0 1px 0 rgba(255, 255, 255, 0.2); }
+        }
     </style>
 </head>
 <body>
@@ -36,19 +41,21 @@
             <div style="position: absolute; top: 70%; right: 10%; width: 120px; height: 120px; background: radial-gradient(circle, rgba(255,20,147,0.06) 0%, transparent 70%); border-radius: 50%; animation: float 8s ease-in-out infinite reverse;"></div>
             <div style="position: absolute; bottom: 10%; left: 15%; width: 90px; height: 90px; background: radial-gradient(circle, rgba(220,20,60,0.05) 0%, transparent 70%); border-radius: 50%; animation: float 7s ease-in-out infinite;"></div>
 
-            <div class="gallery-container">
+            <div class="gallery-container" style="margin-top: 80px;">
             <a href="index.html" class="back-link" style="display: inline-block; color: #ff69b4; text-decoration: none; font-weight: bold; padding: 10px 20px; border-radius: 25px; background: rgba(255, 255, 255, 0.05); backdrop-filter: blur(10px); border: 1px solid rgba(255, 255, 255, 0.1); margin-bottom: 20px; transition: all 0.3s ease; position: relative; z-index: 1;">← Back to Titles</a>
 
-            <div class="gallery-header" style="position: relative; padding: 20px; margin-bottom: 20px;">
-                <!-- Decorative border -->
-                <div style="position: absolute; top: -5px; left: -5px; right: -5px; bottom: -5px; border: 2px solid transparent; border-radius: 15px; background: linear-gradient(45deg, #ff69b4, #ff1493, #dc143c, #ff69b4) border-box; -webkit-mask: linear-gradient(#fff 0 0) padding-box, linear-gradient(#fff 0 0); -webkit-mask-composite: xor; mask: linear-gradient(#fff 0 0) padding-box, linear-gradient(#fff 0 0); mask-composite: exclude; opacity: 0.2; z-index: -1;"></div>
+            <div style="display: flex; align-items: center; justify-content: center; margin: 0; position: fixed; top: 0; left: 0; right: 0; z-index: 1000; background: linear-gradient(135deg, #121212 0%, #1a1a1a 50%, #0a0a0a 100%); padding: 5px 0; backdrop-filter: blur(10px); border: 3px solid transparent; border-radius: 0 0 15px 15px; background: linear-gradient(135deg, #121212 0%, #1a1a1a 50%, #0a0a0a 100%) padding-box, linear-gradient(45deg, #ff69b4, #ff1493, #dc143c, #ff69b4) border-box; box-shadow: 0 0 20px rgba(255, 105, 180, 0.3), 0 0 40px rgba(255, 20, 147, 0.2), inset 0 1px 0 rgba(255, 255, 255, 0.1); animation: borderGlow 3s ease-in-out infinite;">
 
-                <h1 id="titleHeading" style="color: #ffffff; background: linear-gradient(45deg, #ff69b4, #ff1493, #dc143c, #ff69b4); background-size: 400% 400%; -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-clip: text; font-size: 2.2em; font-weight: bold; text-shadow: 2px 2px 4px rgba(0,0,0,0.3); animation: gradientShift 3s ease-in-out infinite; margin: 0 0 10px 0; position: relative; z-index: 1;">Loading...</h1>
-                <p id="imageCount" style="color: #cccccc; margin: 0; font-size: 1.1em; position: relative; z-index: 1;">Loading...</p>
+                <h1 id="titleHeading" style="color: #ffffff; background: linear-gradient(45deg, #ff69b4, #ff1493, #dc143c, #ff69b4); background-size: 400% 400%; -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-clip: text; font-size: 2.2em; font-weight: bold; text-shadow: 2px 2px 4px rgba(0,0,0,0.3); animation: gradientShift 3s ease-in-out infinite; margin: 0 20px 0 0; position: relative; z-index: 2;">Loading...</h1>
+                <p id="imageCount" style="color: #cccccc; margin: 0; font-size: 1.1em; position: relative; z-index: 2;">Loading...</p>
 
-                <!-- Sparkle effects -->
-                <div style="position: absolute; top: 10px; right: 20px; width: 6px; height: 6px; background: #ff69b4; border-radius: 50%; animation: sparkle 2s ease-in-out infinite;"></div>
-                <div style="position: absolute; bottom: 10px; left: 20px; width: 4px; height: 4px; background: #ff1493; border-radius: 50%; animation: sparkle 2.5s ease-in-out infinite;"></div>
+                <!-- Enhanced Sparkle effects -->
+                <div style="position: absolute; top: -8px; right: -8px; width: 12px; height: 12px; background: #ff69b4; border-radius: 50%; animation: sparkle 2s ease-in-out infinite; box-shadow: 0 0 10px #ff69b4;"></div>
+                <div style="position: absolute; bottom: -8px; left: -8px; width: 10px; height: 10px; background: #ff1493; border-radius: 50%; animation: sparkle 2.5s ease-in-out infinite; box-shadow: 0 0 8px #ff1493;"></div>
+                <div style="position: absolute; top: 50%; right: -12px; width: 8px; height: 8px; background: #dc143c; border-radius: 50%; animation: sparkle 3s ease-in-out infinite; box-shadow: 0 0 6px #dc143c;"></div>
+                <div style="position: absolute; top: -6px; left: 20%; width: 6px; height: 6px; background: #ff69b4; border-radius: 50%; animation: sparkle 1.8s ease-in-out infinite; box-shadow: 0 0 4px #ff69b4;"></div>
+                <div style="position: absolute; bottom: -6px; right: 30%; width: 5px; height: 5px; background: #ff1493; border-radius: 50%; animation: sparkle 2.2s ease-in-out infinite; box-shadow: 0 0 3px #ff1493;"></div>
+                <div style="position: absolute; top: 20%; left: -10px; width: 7px; height: 7px; background: #dc143c; border-radius: 50%; animation: sparkle 2.8s ease-in-out infinite; box-shadow: 0 0 5px #dc143c;"></div>
             </div>
 
             <!-- Notification system -->
@@ -58,7 +65,10 @@
             </div>
 
             <div id="imagesContainer" class="image-grid">
-                <p class="loading-text">Loading images...</p>
+                <div class="loading-container">
+                    <div class="pink-spinner"></div>
+                    <p>Loading images...</p>
+                </div>
             </div>
 
             <!-- Pagination controls -->
